update mantine version and jsx version, add photos to about page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
-	"compilerOptions": {
-		"jsx": "react-jsx",
-		"outDir": "./built",
-		"allowJs": true,
-		"target": "es5",
-		"typeRoots": ["types.d.ts"],
-		"types": ["node"]
-	},
-	"include": ["./src/**/*"]
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "outDir": "./built",
+    "allowJs": true,
+    "target": "ES6",
+    "typeRoots": ["types.d.ts"],
+    "types": ["node"],
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["./src/**/*"]
 }
