--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@mantine/core": "^6.0.16",
-    "@mantine/hooks": "^6.0.16",
+    "@mantine/carousel": "^7.17.2",
+    "@mantine/core": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.3",
+    "cloudinary": "^2.6.0",
+    "cloudinary-react": "^1.8.1",
+    "embla-carousel-react": "^7.1.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -40,7 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
-    "react-router-dom": "^6.14.2"
+    "@types/node": "^20.17.24",
+    "react-router-dom": "^6.30.0"
   }
 }
