--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/carousel": "^7.17.2",
     "@mantine/core": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
+    "@tabler/icons-react": "^3.31.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
