--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.6.0",
     "cloudinary-react": "^1.8.1",
     "embla-carousel-react": "^7.1.0",
+    "framer-motion": "^12.5.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
