--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "types": ["node"],
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": ["./src/**/*"]
 }
