--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
