--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -45,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^20.17.24",
-    "react-router-dom": "^6.30.0"
+    "@types/node": "^20.17.24"
   }
 }
